<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_sobre"
    tools:context="mauricio.ray.projetofinal.Sobre"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:id="@+id/linearBotoes">

            <ImageView
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:id="@+id/imageView3"
                android:layout_marginBottom="@dimen/marg_bottom_qi"
                android:layout_centerHorizontal="true"
                android:background="@drawable/teste_cadastro_cliente"
                android:layout_gravity="center_horizontal" />

            <TextView android:text="@string/so_nomeapp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:layout_margin="@dimen/espacamento"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/texto"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/so_versao"
                android:id="@+id/textView3"
                android:layout_margin="@dimen/espacamento"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/texto" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/so_data"
                android:id="@+id/textView5"
                android:layout_margin="@dimen/espacamento"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="@dimen/texto" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/so_desenvolvedor"
                android:id="@+id/textView4"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_margin="@dimen/espacamento"
                android:textColor="@color/black"
                android:textSize="@dimen/texto" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/so_site"
                android:id="@+id/textView6"
                android:layout_margin="@dimen/espacamento"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/texto" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/so_contato"
                android:id="@+id/textView7"
                android:layout_margin="@dimen/espacamento"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/texto" />

            <ImageView
                android:layout_width="@dimen/width_cluster"
                android:layout_height="@dimen/height_cluster"
                android:id="@+id/imageView2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/espacamento"
                android:layout_gravity="center_horizontal|center_vertical"
                android:background="@drawable/logo_colorido"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/tvDesenvolvedoresParceiros"
                android:id="@+id/tvDesenvolvedoresParceiros"
                android:textSize="@dimen/texto"
                android:layout_margin="@dimen/espacamento"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/tvFilipe"
                android:textSize="@dimen/texto"
                android:id="@+id/tvFilipe"
                android:layout_margin="@dimen/espacamento"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/tvMauricio"
                android:textSize="@dimen/texto"
                android:id="@+id/tvMauricio"
                android:layout_margin="@dimen/espacamento"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/tvRafael"
                android:textSize="@dimen/texto"
                android:id="@+id/tvRafael"
                android:layout_margin="@dimen/espacamento"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/tvThiago"
                android:textSize="@dimen/texto"
                android:id="@+id/tvThiago"
                android:layout_margin="@dimen/espacamento"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>